samples/errors/wrongcollection.py
import random

if __name__ == '__main__':
    variants = {'foo', 'bar', 'baz'}
    print random.choice(variants)
